package org.example.classes;

import org.example.interfaces.PreProcessor;

public class PreProcessorToLowerImpl implements PreProcessor {
    public PreProcessorToLowerImpl() {
    }


}
