package org.example.classes;

import org.example.interfaces.PreProcessor;

public class PreProcessorToUpperImpl implements PreProcessor {
    public PreProcessorToUpperImpl() {
    }
}
