package org.example.interfaces;

public interface PreProcessor {
}
