package org.example.interfaces;

public interface Printer {
    void print(String message);
}
