package org.example.interfaces;

public interface Renderer {
    public PreProcessor getPreProcessor();
}
